--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "dependencies": {
     "@babel/preset-react": "^7.0.0",
     "@rails/webpacker": "^4.0.7",
+    "axios": "^0.19.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-on-rails": "^11.3.0"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.7.2"
