--- a/config/database.yml
+++ b/config/database.yml
@@ -17,9 +17,13 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
+  adapter: postgresql
+  pool: 5
+  timeout: 5000
   database: db/test.sqlite3
 
 production:
-  <<: *default
+  adapter: postgresql
+  pool: 5
+  timeout: 5000
   database: db/production.sqlite3
