--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-on-rails": "^11.3.0"
+    "react-on-rails": "^11.3.0",
+    "webpack": "^4.39.1"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.7.2"
