--- a/package.json
+++ b/package.json
@@ -2,10 +2,8 @@
   "name": "plantApp",
   "private": true,
   "dependencies": {
-    "@babel/preset-react": "^7.0.0",
     "@rails/webpacker": "^4.0.7",
     "axios": "^0.19.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -13,6 +11,14 @@
     "webpack": "^4.39.1"
   },
   "devDependencies": {
-    "webpack-dev-server": "^3.7.2"
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "babel-loader": "^8.0.6",
+    "webpack": "^4.17.1",
+    "webpack-cli": "^3.1.0"
+  },
+  "scripts": {
+    "webpack:deploy": "webpack --config=webpack/webpack.config.js -p",
+    "heroku-postbuild": "npm run webpack:deploy"
   }
 }
