--- a/config/database.yml
+++ b/config/database.yml
@@ -17,9 +17,7 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: postgresql
-  pool: 5
-  timeout: 5000
+  <<: *default
   database: db/test.sqlite3
 
 production:
