--- a/test/fixtures/orders.yml
+++ b/test/fixtures/orders.yml
@@ -3,7 +3,9 @@
 one:
   name: MyString
   description: MyText
+  plant_class: one
 
 two:
   name: MyString
   description: MyText
+  plant_class: one
