--- a/test/fixtures/growth_observations.yml
+++ b/test/fixtures/growth_observations.yml
@@ -5,9 +5,11 @@ one:
   observation_date: 2021-01-07
   bbch_stage: one
   percent_at_stage: 1
+  user: one
 
 two:
   plant_instance: two
   observation_date: 2021-01-07
   bbch_stage: two
   percent_at_stage: 1
+  user: two
