--- a/config/storage.yml
+++ b/config/storage.yml
@@ -14,6 +14,17 @@ local:
 #   region: us-east-1
 #   bucket: your_own_bucket
 
+amazon:
+  service: S3
+  access_key_id: <%= Figaro.env.aws_access_id %> #<%= Rails.application.credentials.dig(:aws, :access_key_id) %>
+  secret_access_key: <%= Figaro.env.aws_access_secret %> #<%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
+  region: us-west-1
+  bucket: <%= Figaro.env.bucket %>
+  # development:
+  #   bucket: "plantapp-dev"
+  # production:
+  #   bucket: "plantapp-prod"
+
 # Remember not to checkin your GCS keyfile to a repository
 # google:
 #   service: GCS
